syntax = "proto3";

package api.user.service.v1;
option go_package = "api/user/service/v1;v1";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service User {
    rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            // 定义一个 POST 接口，并且把 body 映射到 grpc
            post: "/v1/user",
            body: "*",
        };
    };
    rpc UserGroupInfo(UserGroupInfoRequest) returns (UserGroupInfoResponse){
        option (google.api.http) = {
            // 定义一个 POST 接口，并且把 body 映射到 grpc
            post: "/v1/user/groupInfo",
            body: "*",
        };
    };
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message UserGroupInfoRequest {
    int64 uid = 1;
    int64 group_id = 2;
}

message UserGroupInfoResponse {
    int64 group_id = 1;
    string group_name = 2;
}
